--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -1,45 +1,33 @@
-# This is a basic workflow to help you get started with Actions
+name: Jest_test
 
-name: Artifact workflow
+on: [push]
 
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: ["main"]
-  pull_request:
-    branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    runs-on: ubuntu-latest 
+    
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4.1.5
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Install dependencies
-        run: npm install
-        working-directory: Lab1
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'
 
-      - name: Build project
-        run: npm run build
-        working-directory: Lab1
+    - name: Change to Calculator directory
+      run: cd LAB1
 
-      # Run unit tests after a build is done
-      - name: Run unit tests
-        run: npm run test
-        working-directory: Lab1
+    - name: Install dependencies
+      run: npm install
+      working-directory: LAB1
 
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4.3.3
-        with:
-          name: build-artifact
-          path: Lab1/dist
+    - name: Run Jest tests
+      run: npm test
+      working-directory: LAB1
+
+    - name: Archive dist folder
+      uses: actions/upload-artifact@v2
+      with:
+        name: artifacts
+        path: LAB1/dist
