--- a/.github/workflows/MyName.yml
+++ b/.github/workflows/MyName.yml
@@ -1,17 +1,17 @@
 name: Lab1
 
-on: 
+on:
   push:
-    branches: 
+    branches:
       - main
-      
+
 jobs:
   echo-name-job:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Echo my name
-      run: echo "My name is Akshat"
+      - name: Echo my name
+        run: echo "My name is Tushar Tiwari"
