--- a/.github/workflows/unitTest.yml
+++ b/.github/workflows/unitTest.yml
@@ -19,22 +19,18 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14'
-          
-      - name: Change to Calculator directory
-        run: cd BCDV4033/Calculator
+          node-version: "14"
 
       - name: Install dependencies
         run: npm install
-        working-directory: BCDV4033/Calculator
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
-        with: 
-         name: assets
-         path: BCDV4033/Calculator/dist
-         
-         # Fetch the secret API key
+        with:
+          name: assets
+          path: BCDV4033/Calculator/dist
+
+          # Fetch the secret API key
       - name: Set up API key
         run: echo "API_KEY=${{ secrets.TEST_SECRET }}" >> $GITHUB_ENV
 
@@ -42,12 +38,7 @@ jobs:
         run: echo "The API key is $API_KEY"
 
       - name: Install dependencies
-        run: yarn    
-      - uses: actions/download-artifact@v2
-        with:
-           name: assets
-           path: BCDV4033/Calculator/dist
+        run: yarn
+
       - name: Run Lint Checks
         run: yarn style
-        working-directory: BCDV4033/Calculator
-        
