--- a/.github/workflows/unitTest.yml
+++ b/.github/workflows/unitTest.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-        working-directory: BCDV4033/Calculator
+        working-directory: Calculator
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
